# belajar-axum-bareng-extraodev

./: Cargo.toml
src/: error.rs  main.rs  state.rs
src/layers/: auth.rs
src/models/: auth.rs  task.rs
src/modules/auth/: mod.rs  repositories.rs  routes.rs  service.rs  types.rs
src/modules/task/: mod.rs  repositories.rs  routes.rs  service.rs  types.rs
src/routes/: auth.rs  task.rs
